# bundlemanager_bundle_framework_lite

./: OAT.xml  README.md  README_zh.md  bundle.json  bundle_framework_lite.gni
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
frameworks/bundle_lite/: BUILD.gn
frameworks/bundle_lite/include/: ability_info_utils.h  bundle_callback_utils.h  bundle_info_utils.h  bundlems_slite_client.h  element_name_utils.h
frameworks/bundle_lite/src/: ability_info.cpp  ability_info_utils.cpp  bundle_callback.cpp  bundle_info_utils.cpp  bundle_manager.cpp  bundle_self_callback.cpp  convert_utils.cpp  element_name.cpp
frameworks/bundle_lite/src/slite/: bundle_manager_inner.cpp  bundlems_slite_client.cpp
interfaces/inner_api/bundlemgr_lite/: bundle_inner_interface.h  bundle_service_interface.h
interfaces/inner_api/bundlemgr_lite/slite/: bundle_install_msg.h
interfaces/kits/bundle_lite/: ability_info.h  appexecfwk_errors.h  bundle_manager.h  element_name.h
interfaces/kits/bundle_lite/js/builtin/: BUILD.gn
interfaces/kits/bundle_lite/slite/: bundle_manager.h
services/bundlemgr_lite/: BUILD.gn
services/bundlemgr_lite/bundle_daemon/: BUILD.gn
services/bundlemgr_lite/bundle_daemon/include/: bundle_file_utils.h
services/bundlemgr_lite/bundle_daemon/src/: bundle_daemon.cpp  bundle_daemon_handler.cpp  bundle_file_utils.cpp
services/bundlemgr_lite/include/: bundle_common.h  bundle_daemon_client.h  bundle_map.h  bundle_mgr_service.h  bundle_mgr_slite_feature.h  bundle_ms_feature.h  bundle_util.h  bundlems_log.h  gt_bundle_extractor.h  gt_bundle_installer.h  gt_bundle_manager_service.h  gt_bundle_parser.h  gt_extractor_util.h
services/bundlemgr_lite/src/: bundle_daemon_client.cpp  bundle_extractor.cpp  bundle_info_creator.cpp  bundle_inner_feature.cpp  bundle_installer.cpp  bundle_manager_service.cpp  bundle_map.cpp  bundle_mgr_service.cpp  bundle_mgr_slite_feature.cpp  bundle_ms_feature.cpp  bundle_ms_host.cpp  bundle_parser.cpp  bundle_res_transform.cpp  bundle_util.cpp  extractor_util.cpp  gt_bundle_extractor.cpp  gt_bundle_installer.cpp  gt_bundle_manager_service.cpp  gt_bundle_parser.cpp  gt_extractor_util.cpp  hap_sign_verify.cpp  zip_file.cpp
services/bundlemgr_lite/tools/: BUILD.gn
utils/bundle_lite/: adapter.h  utils_list.h
