# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ace_engine_lite_path = "//foundation/arkui/ace_engine_lite"
appverify_lite_path =
    "//base/security/appverify/interfaces/innerkits/appverify_lite"
arkui_path = "//foundation/arkui"
communication_path = "//foundation/communication"
hilog_lite_path = "//base/hiviewdfx/hilog_lite"
permission_lite_path = "//base/security/permission_lite"
resource_management_lite_path = "//base/global/resource_management_lite"
samgr_lite_path = "//foundation/systemabilitymgr/samgr_lite"
startup_path = "//base/startup"
utils_lite_path = "//commonlibrary/utils_lite"

declare_args() {
  enable_ohos_bundle_manager_service = false
  enable_ohos_bundle_manager_service_permission = false
  enable_ohos_bundle_manager_service_parse_metadata = false
}
