# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")
import(
    "//foundation/bundlemanager/bundle_framework_lite/bundle_framework_lite.gni")

generate_notice_file("bundle_daemon_lite_notice_file") {
  module_name = "bundle_daemon_lite"
  module_source_dir_list = [
    "//third_party/cJSON",
    "//third_party/zlib",
  ]
}

executable("bundle_daemon") {
  sources = [
    "../src/extractor_util.cpp",
    "../src/zip_file.cpp",
    "src/bundle_daemon.cpp",
    "src/bundle_daemon_handler.cpp",
    "src/bundle_file_utils.cpp",
    "src/bundlems_client.cpp",
    "src/main.cpp",
  ]

  cflags = [
    "-Wall",
    "-Wno-format",
  ]
  cflags_cc = cflags

  ldflags = [
    "-lstdc++",
    "-Wl,-Map=bundle_daemon_tool.map",
  ]

  deps = [
    "${hilog_lite_path}/frameworks/featured:hilog_shared",
    "${samgr_lite_path}/samgr:samgr",
    "//build/lite/config/component/zlib:zlib_shared",
  ]

  include_dirs = [
    "include",
    "${appexecfwk_lite_path}/interfaces/inner_api/bundlemgr_lite",
    "${appexecfwk_lite_path}/utils/bundle_lite",
    "${appexecfwk_lite_path}/services/bundlemgr_lite/include",
    "${samgr_lite_path}/interfaces/innerkits/samgr",
    "${samgr_lite_path}/interfaces/innerkits/registry",
    "//third_party/zlib/contrib/minizip",
    "${utils_lite_path}/include",
  ]
}
